add downloadhelper to singletons, make dialog use it

--- a/project/SPTarkov.Launcher/Pages/ModLoader.razor
+++ b/project/SPTarkov.Launcher/Pages/ModLoader.razor
@@ -3,20 +3,21 @@
 @implements IDisposable
 
 @inject ModManager ModManager
+@inject DownloadHelper DownloadHelper
 
 <MudContainer Class="px-4 my-2 page-animation-switch" MaxWidth="MaxWidth.Large" Style="height: 96vh;">
     <MudGrid Spacing="4" Justify="Justify.SpaceEvenly" Class=" mud-height-full">
         <MudItem sm="6" Class="uninstalled mud-height-full">
             <MudPaper Elevation="2" Class="pa-4 d-flex flex-column flex-none gap-2 border-2 border-solid mud-border-lines-default card-container mud-height-full">
                 <MudText Typo="Typo.h6" Align="Align.Center" Color="Color.Default">Uninstalled Mods</MudText>
-                @foreach (var (name, item) in ModManager.GetMods())
+                @foreach (var (name, item) in DownloadHelper.GetDownloadTasks())
                 {
                     <MudLink Class="setting-on-hover pa-1 d-inline-block mud-width-full d-flex flex-row" Underline="Underline.None" Color="Color.Default">
 
                         <MudContainer Class="d-flex flex-row pa-0">
                             <MudContainer Class="text-overflow py-2 px-1">
                                 <MudText HtmlTag="span">
-                                    @name
+                                    @item.ForgeMod.Name
                                 </MudText>
                                 <MudProgressLinear Rounded="true" Color="Color.Info" Size="Size.Small" Value="@item.Progress" Min="0" Max="100" Class="mt-2">
                                     <ChildContent>
@@ -27,13 +28,30 @@
                             @if (!item.Complete)
                             {
                                 <MudTooltip Arrow="false" ShowOnHover="true" ShowOnFocus="false" ShowOnClick="false" Text="Cancel" Placement="Placement.Left">
-                                    <MudIconButton Size="Size.Small" Icon="@Icons.Material.Filled.Cancel" Color="Color.Error" OnClick="() => ModManager.CancelModDownload(name)"/>
+                                    <MudIconButton Size="Size.Small" Icon="@Icons.Material.Filled.Cancel" Color="Color.Error" OnClick="() => DownloadHelper.CancelModDownload(name)"/>
                                 </MudTooltip>
                             }
                             else
                             {
                                 // button to install
                             }
+                        </MudContainer>
+
+                    </MudLink>
+                }
+                @foreach (var (guid, mod) in ModManager.GetMods())
+                {
+                    <MudLink Class="setting-on-hover pa-1 d-inline-block mud-width-full d-flex flex-row" Underline="Underline.None" Color="Color.Default">
+
+                        <MudContainer Class="d-flex flex-row pa-0">
+                            <MudContainer Class="text-overflow py-2 px-1">
+                                <MudText HtmlTag="span">
+                                    @guid
+                                </MudText>
+                            </MudContainer>
+                            <MudTooltip Arrow="false" ShowOnHover="true" ShowOnFocus="false" ShowOnClick="false" Text="Cancel" Placement="Placement.Left">
+                                <MudIconButton Size="Size.Small" Icon="@Icons.Material.Filled.InstallDesktop" Color="Color.Error" /> @*  OnClick="() => ModManager.InstallMod(name)" *@
+                            </MudTooltip>
                         </MudContainer>
 
                     </MudLink>
@@ -54,7 +72,7 @@
 
     protected override Task OnAfterRenderAsync(bool firstRender)
     {
-        _progressTimer = new Timer((_) => { InvokeAsync(StateHasChanged); }, default, TimeSpan.FromSeconds(2), TimeSpan.Zero);
+        _progressTimer = new Timer((_) => { InvokeAsync(StateHasChanged); }, default, TimeSpan.FromMilliseconds(500), TimeSpan.Zero);
         return base.OnAfterRenderAsync(firstRender);
     }
 
@@ -62,10 +80,4 @@
     {
         _progressTimer?.Dispose();
     }
-
-    private async Task CallUnzip(DownloadTask downloadTask)
-    {
-        await ModManager.UnzipMod(downloadTask);
-    }
-
 }
