add basic ui to show mods for now

--- a/project/SPTarkov.Launcher/Pages/ModLoader.razor
+++ b/project/SPTarkov.Launcher/Pages/ModLoader.razor
@@ -12,6 +12,11 @@
                 <MudText Typo="Typo.h6" Align="Align.Center" Color="Color.Default">Uninstalled Mods</MudText>
                 @foreach (var (name, item) in DownloadHelper.GetDownloadTasks())
                 {
+                    @if (item.Complete)
+                    {
+                        continue;
+                    }
+
                     <MudLink Class="setting-on-hover pa-1 d-inline-block mud-width-full d-flex flex-row" Underline="Underline.None" Color="Color.Default">
 
                         <MudContainer Class="d-flex flex-row pa-0">
@@ -41,6 +46,10 @@
                 }
                 @foreach (var (guid, mod) in ModManager.GetMods())
                 {
+                    if (mod.IsInstalled)
+                    {
+                        continue;
+                    }
                     <MudLink Class="setting-on-hover pa-1 d-inline-block mud-width-full d-flex flex-row" Underline="Underline.None" Color="Color.Default">
 
                         <MudContainer Class="d-flex flex-row pa-0">
@@ -50,7 +59,7 @@
                                 </MudText>
                             </MudContainer>
                             <MudTooltip Arrow="false" ShowOnHover="true" ShowOnFocus="false" ShowOnClick="false" Text="Cancel" Placement="Placement.Left">
-                                <MudIconButton Size="Size.Small" Icon="@Icons.Material.Filled.InstallDesktop" Color="Color.Error" /> @*  OnClick="() => ModManager.InstallMod(name)" *@
+                                <MudIconButton Size="Size.Small" Icon="@Icons.Material.Filled.InstallDesktop" Color="Color.Error" OnClick="() => ModManager.InstallMod(guid)" /> @*  OnClick="() => ModManager.InstallMod(name)" *@
                             </MudTooltip>
                         </MudContainer>
 
@@ -61,7 +70,27 @@
         <MudItem sm="6" Class="installed mud-height-full">
             <MudPaper Elevation="2" Class="pa-4 d-flex flex-column flex-none gap-2 border-2 border-solid mud-border-lines-default card-container mud-height-full">
                 <MudText Typo="Typo.h6" Align="Align.Center" Color="Color.Default">Installed Mods</MudText>
+                @foreach (var (guid, mod) in ModManager.GetMods())
+                {
+                    if (!mod.IsInstalled)
+                    {
+                        continue;
+                    }
+                    <MudLink Class="setting-on-hover pa-1 d-inline-block mud-width-full d-flex flex-row" Underline="Underline.None" Color="Color.Default">
 
+                        <MudContainer Class="d-flex flex-row pa-0">
+                            <MudContainer Class="text-overflow py-2 px-1">
+                                <MudText HtmlTag="span">
+                                    @guid
+                                </MudText>
+                            </MudContainer>
+                            <MudTooltip Arrow="false" ShowOnHover="true" ShowOnFocus="false" ShowOnClick="false" Text="Cancel" Placement="Placement.Left">
+                                <MudIconButton Size="Size.Small" Icon="@Icons.Material.Filled.InstallDesktop" Color="Color.Success" OnClick="() => ModManager.DeleteMod(guid)" />
+                            </MudTooltip>
+                        </MudContainer>
+
+                    </MudLink>
+                }
             </MudPaper>
         </MudItem>
     </MudGrid>
