--- a/project/SPT.Launcher/Views/SettingsView.axaml
+++ b/project/SPT.Launcher/Views/SettingsView.axaml
@@ -16,10 +16,11 @@
                Opacity=".7"
                />
     <WrapPanel Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal">
-	  <Button Content="{Binding Source={x:Static helpers:LocalizationProvider.Instance}, Path=load_live_settings}"
+      <!-- Temporarily disabled due to live settings not being compatible -->
+      <!--<Button Content="{Binding Source={x:Static helpers:LocalizationProvider.Instance}, Path=load_live_settings}"
               Command="{Binding ResetGameSettingsCommand}"
               Classes="outlined" Margin="0 0 10 5"
-              />
+              />-->
       <Button Content="{Binding Source={x:Static helpers:LocalizationProvider.Instance}, Path=clear_game_settings}"
               Command="{Binding ClearGameSettingsCommand}"
               Classes="outlined" Margin="0 0 10 5"
