--- a/project/SPTarkov.Launcher/Dialogs/Forge/ForgeUpdateDialog.razor
+++ b/project/SPTarkov.Launcher/Dialogs/Forge/ForgeUpdateDialog.razor
@@ -6,25 +6,46 @@
 
 <MudDialog Class="mud-background-gray border-2 border-solid mud-border-lines-default">
     <DialogContent>
-        <MudContainer Class="d-flex flex-column gap-1 mt-4">
-            <MudPaper Class="mud-background-gray border-2 border-solid mud-border-lines-default mb-4 pa-2">
-                <MudText>@_taskText</MudText>
-            </MudPaper>
-            <MudContainer Class="mb-4 pa-0">
-                <MudButton Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy" Variant="Variant.Filled" Color="Color.Dark" StartIcon="@Icons.Material.Filled.Download" IconColor="Color.Success" OnClick="RunUpdateTask" Disabled="@_requestInProgress">Update</MudButton>
-                <MudButton Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy" Variant="Variant.Filled" Color="Color.Dark" OnClick="UserCancelled">Close</MudButton>
+        @if (!CheckedForUpdates)
+        {
+            <MudContainer Class="d-flex flex-column gap-1 mt-4">
+                <MudPaper Class="mud-background-gray border-2 border-solid mud-border-lines-default mb-4 pa-2">
+                    <MudText>@_taskText</MudText>
+                </MudPaper>
+                <MudContainer Class="mb-4 pa-0">
+                    <MudButton Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy" Variant="Variant.Filled" Color="Color.Dark" StartIcon="@Icons.Material.Filled.Download" IconColor="Color.Success" OnClick="CheckForUpdates" Disabled="@_requestInProgress">Check for Updates</MudButton>
+                    <MudButton Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy" Variant="Variant.Filled" Color="Color.Dark" OnClick="UserCancelled">Close</MudButton>
+                </MudContainer>
             </MudContainer>
-        </MudContainer>
+        }
+        else if (CheckedForUpdates && ForgeUpdateResponse is not null && ForgeUpdateResponse.Success && ForgeUpdateResponse.Data.Updates.Any())
+        {
+            <MudContainer Class="d-flex flex-column gap-1 mt-4">
+                <MudPaper Class="mud-background-gray border-2 border-solid mud-border-lines-default mb-4 pa-2">
+                    <MudText>@_taskText</MudText>
+                    <MudDivider DividerType="DividerType.Middle" />
+                    @foreach (var item in ForgeUpdateResponse.Data.Updates)
+                    {
+                        <MudText Class="py-2">@item.CurrentVersion.Name</MudText>
+                    }
+                </MudPaper>
+                <MudContainer Class="mb-4 pa-0">
+                    <MudButton Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy" Variant="Variant.Filled" Color="Color.Dark" StartIcon="@Icons.Material.Filled.Download" IconColor="Color.Success" OnClick="RunUpdates" Disabled="@_requestInProgress">Update Mods</MudButton>
+                    <MudButton Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy" Variant="Variant.Filled" Color="Color.Dark" OnClick="UserCancelled">Cancel</MudButton>
+                </MudContainer>
+            </MudContainer>
+        }
     </DialogContent>
 </MudDialog>
 
 @code {
     [CascadingParameter] private IMudDialogInstance MudDialog { get; set; }
-    [Parameter] public ConfigMod Mod { get; set; }
     private bool _requestInProgress;
     private CancellationTokenSource Token { get; set; }
     private bool UserCancel { get; set; }
     private string _taskText = "Check for updates?";
+    private bool CheckedForUpdates { get; set; }
+    private ForgeUpdateResponse ForgeUpdateResponse { get; set; }
 
     private async Task<ForgeUpdateResponse?> CallForge(string taskText = "", string failString = "")
     {
@@ -35,57 +56,55 @@
             StateHasChanged();
             await Task.Delay(20);
 
-            var result = await HttpHelper.ForgeGetUpdate(Mod.GUID, Mod.ModVersion, "4.0.7", Token.Token);
+            var listOfModsToCheck = ModManager.GetMods().Where(w => !w.Value.IsInstalled).Select(x => $"{x.Key}:{x.Value.ModVersion}").ToList();
 
-            if (result is null)
+            var response = await HttpHelper.ForgeGetUpdate(listOfModsToCheck, "4.0.7", Token.Token);
+
+            if (response is null)
             {
-                Logger.LogError("Forge ForgeGetUpdate result is null");
-                return null;
+                Logger.LogError("Forge ForgeGetUpdate response is null");
             }
 
-            if (result.Success)
+            if (response!.Success)
             {
                 Logger.LogInformation("Forge ForgeGetUpdate Authenticated");
-                return result;
             }
 
-            if (!result.Success)
+            if (!response.Success)
             {
                 Logger.LogInformation("Forge ForgeGetUpdate NOT - Authenticated");
                 Token?.Dispose();
                 AbortOrFail(failString);
-                return null;
             }
+
+            return response;
         }
         catch (Exception)
         {
             AbortOrFail(failString);
-            return null;
         }
 
         return null;
     }
 
-    private async Task RunUpdateTask()
+    private async Task CheckForUpdates()
     {
         _requestInProgress = true;
         Token = new CancellationTokenSource(); // Dont give a timeout, some people might just have shit internet
         try
         {
-            var result = await CallForge("Checking for updates", "Failed to check for updates");
+            ForgeUpdateResponse = await CallForge("Checking for updates", "Failed to check for updates");
             // we abort if failed so no need to check result
-            if (!result.Data.Updates.Any())
+            CheckedForUpdates = true;
+
+            if (!ForgeUpdateResponse.Data.Updates.Any())
             {
                 Snackbar.Add("No update detected", Severity.Info);
+                Submit();
                 return;
             }
 
-            var check = await ModManager.UpdateMod(result.Data.Updates.FirstOrDefault(), Token);
-
-            if (!check)
-            {
-                AbortOrFail("Failed to check for updates");
-            }
+            _taskText = "Below mods have available updates!";
         }
         catch (TaskCanceledException) when (Token.IsCancellationRequested)
         {
@@ -104,12 +123,27 @@
         }
 
         _requestInProgress = false;
+    }
+
+    private async Task RunUpdates()
+    {
+        _taskText = "Updating mods";
+        StateHasChanged();
+
+        foreach (var forgeModUpdate in ForgeUpdateResponse.Data.Updates)
+        {
+            await ModManager.UpdateMod(forgeModUpdate, Token);
+        }
+
+        _taskText = "Updates complete";
+        StateHasChanged();
+        await Task.Delay(1000);
+
         Submit();
     }
 
     private void Submit()
     {
-        Snackbar.Add($"Update started for {Mod.ModName}", Severity.Success);
         MudDialog.Close(DialogResult.Ok(true));
     }
 
@@ -132,4 +166,5 @@
         Token?.Cancel();
         MudDialog.Cancel();
     }
+
 }
